<resources>
    <string name="app_name">WebAdvisor</string>
    <string name="title_home">Home</string>
    <string name="title_courses">Courses</string>
    <string name="title_reslife">ResLife</string>
    <string name="login_button_prompt">Login</string>
    <string name="class_search_button">Search for Classes</string>
    <string name="current_courses_button">Course Schedule</string>
    <string name="transcript_view_button">View Transcript</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_prompt">Select the Term of the Requested Schedule</string>
    <string name="submit">Submit</string>
    <string name="search_prompt">Search for Classes</string>
    <string name="meeting_after_text">Meeting After:</string>
    <string name="ending_before_text">Ending Before:</string>
    <string name="subjects">Subject</string>
    <string name="course_number">Course #</string>
    <string name="section">Section</string>
    <string name="title_keyword_search">Course Title Keyword(s)</string>
    <string name="instructor_search">Instructor\'s Last Name</string>
    <string name="gen_ed_search">Area Approval</string>
    <string name="course_main_menu">Course Options</string>
    <string name="transcript_title">Transcript</string>
    <string name="search_results_title">Search Results</string>
    <string name="logout_prompt">Logout</string>
    <string name="welcome_logged_out">Please Login to Continue</string>
    <string name="res_life_options">Residential Life Options</string>
    <string name="meal_plan_button">Marketplace Summary</string>
    <string name="mail_box_button">Mail Box Information</string>
    <string name="mail_box_title">Mail Box Information</string>
    <string name="box_number">Box Number:</string>
    <string name="box_combination">Box Combination:</string>
    <string name="meal_plan_title">Marketplace Account</string>
</resources>
