<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.courses.subfragments.SearchCoursesFragment">

    <FrameLayout
        android:id="@+id/child_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/search_fields_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/prompt_text_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_prompt"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/term_dropdown_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:orientation="vertical"
                android:gravity="top"
                android:paddingStart="8dp"
                android:paddingEnd="4dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/subjects"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/department_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:orientation="vertical"
                android:gravity="top"
                android:paddingStart="4dp"
                android:paddingEnd="4dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/course_number"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/course_number_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:ignore="Autofill,LabelFor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:orientation="vertical"
                android:gravity="top"
                android:paddingStart="4dp"
                android:paddingEnd="8dp" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/section"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/section_search"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    tools:ignore="Autofill,LabelFor" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="18"
                android:paddingStart="8dp"
                android:text="@string/meeting_after_text"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/meeting_after_dropdown_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingEnd="4dp"
                android:layout_weight="32"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="4dp"
                android:layout_weight="18"
                android:text="@string/ending_before_text"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/ending_before_dropdown_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="32"
                android:paddingEnd="8dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/title_keyword_search"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/course_keyword_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/instructor_search"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/course_instructor_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:inputType="text"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center_vertical"
                android:text="@string/gen_ed_search"
                android:paddingStart="8dp"
                android:paddingEnd="4dp"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/area_approval_selection_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingEnd="8dp"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <Button
            android:id="@+id/submit_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textSize="20sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>